--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,36 +1,15 @@
 spring:
-  application:
-    name: road-to-scala
   datasource:
-    url: jdbc:postgresql://postgresql:5432/demo_db
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:h2:mem:h2DB;DB_CLOSE_DELAY=-1;CASE_INSENSITIVE_IDENTIFIERS=true
+    username: ${DB_USERNAME:sa}
+    password: ${DB_PASSWORD:password}
+    driver-class-name: org.h2.Driver
   jpa:
-    database: postgresql
-    hibernate:
-      ddl-auto: update
-
-server:
-  error:
-    include-exception: false
-    include-message: always
-    include-stacktrace: always
+    database: h2
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
 security:
-  secret: secret12345678
-  token-lifetime: 15m
-  refresh-token-lifetime: 30d
-
-logstash:
-  url: logstash:4560
-
-management:
-  metrics:
-    export:
-      prometheus:
-        enabled: true
-  endpoints:
-    web:
-      exposure:
-        include : "info,health,prometheus,metrics"
+  token-lifetime: 30m
