--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,3 +34,9 @@ management:
     web:
       exposure:
         include : "info,health,prometheus,metrics"
+
+logging:
+  level:
+    org:
+      hibernate:
+        type:trace
