--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: road-to-scala
   datasource:
-    url: jdbc:postgresql://postgresql:5432/demo_db
+    url: jdbc:postgresql://postgresql:5432/road_to_scala
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
